fix: nginx config

--- a/.editorconfig
+++ b/.editorconfig
@@ -21,3 +21,7 @@ eclint_indent_style = unset
 [Dockerfile]
 indent_style = space
 indent_size = 4
+
+[nginx.conf]
+indent_style = tab
+indent_size = 8
